--- a/public/index.html
+++ b/public/index.html
@@ -9,51 +9,26 @@
   </head>
 
   <body>
-    <div class="pokedex-container">
-      <header class="row">
-        <div class="pokedex-logo">
-          <img src="./templates/resources/images/master.png" alt="ball-logo" />
+    <div class="pokedex__container">
+      <header>
+        <div class="pokedex__container--logo">
+          <img src="./templates/resources/images/master.png" alt="pokeball" />
         </div>
         <a href="">POKEDEX</a>
       </header>
       <main>
-        <div class="row-center">
-          <div class="card">
-            <div class="poke-name">
+        <div class="pokedex__main">
+          <div class="pokedex__card">
+            <div class="pokedex__card--name">
               <img src="./templates/resources/images/fire.png" />
               <span>CHARIZARD</span>
             </div>
-            <div class="pokemon-sprite">
+            <div class="pokedex__card--sprite">
               <img src="./templates/resources/images/charizard.png" />
             </div>
           </div>
-          <div class="data-info">
-            <div>
-              <span class="data-text">NO.</span>
-              <span>006</span>
-            </div>
-            <div>
-              <span class="data-text">LEVEL</span>
-              <span>100</span>
-            </div>
-            <div>
-              <span class="data-text">TYPE</span>
-              <span>FIRE</span>
-            </div>
-            <div>
-              <span class="data-text">HABILITY</span>
-              <span>FLAMES</span>
-            </div>
-            <div>
-              <span class="data-text">HEIGHT</span>
-              <span>1.7 M</span>
-            </div>
-            <div>
-              <span class="data-text">WEIGHT</span>
-              <span>90.5 Kg</span>
-            </div>
-          </div>
-          <!--   <ul class="data-info">
+
+          <ul class="pokedex__info">
             <li>
               <span class="data-text">NO.</span>
               <span>006</span>
@@ -78,7 +53,7 @@
               <span class="data-text">WEIGHT</span>
               <span>90.5 Kg</span>
             </li>
-          </ul> -->
+          </ul>
         </div>
       </main>
       <footer>
